# QV-Spick-2026

Programieren/spick/: .gitignore  Testnotebook.py  calc.py  pyproject.toml  utils.py
Programieren/spick/notebooks/: Elektronik_v1.ipynb  Elektrotechnik.ipynb  Widerstand_Zusammenfassung.ipynb  spick.ipynb
Programieren/spick/notebooks/Formeln/: Cap.py  ResCap.py
Programieren/spick/notebooks/Utils/: Parsing.py
